# bobs_new

./: .gitignore  README.md  _config.yml  devenv.nix  exercises.md  lecture_notes_25W.md  lectures.md  productivity.md
_modules/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md  week-09.md  week-10.md  week-11.md  week-12.md  week-13.md  week-14.md
_sass/custom/: module.scss
_staffers/: dominik.md
exercises/calr/: Cargo.toml
exercises/cat_rs/: Cargo.toml  TODO  TODO.md  test.txt
exercises/cat_rs/src/: lib.rs  main.rs
exercises/cat_rs/tests/: cli.rs
exercises/catr/: foo.txt
exercises/catr/src/: main.rs
exercises/commr/: Cargo.toml
exercises/commr/src/: main.rs
exercises/cutr/: Cargo.toml
exercises/cutr/src/: main.rs
exercises/cutr/tests/: cli.rs
exercises/echo_rs/: Cargo.toml
exercises/echo_rs/src/: main.rs
exercises/echo_rs/tests/: cli.rs
exercises/findr/: Cargo.toml  TODO
exercises/findr/src/: main.rs
exercises/head_rs/: Cargo.toml
exercises/head_rs/src/: main.rs
exercises/head_rs/tests/: cli.rs
exercises/headr/: Cargo.toml  README.md  TODO  lectures.md
exercises/headr/src/: main.rs
exercises/rgb-color/: Cargo.toml
exercises/rgb-color/src/: main.rs
exercises/tailr/: Cargo.toml
exercises/tailr/src/: main.rs
exercises/true_rs/: Cargo.toml
exercises/wc_rs/: Cargo.toml
exercises/wc_rs/src/: main.rs
exercises/wc_rs/tests/: cli.rs
productivity/: get_headlines.sh
tutorials/: besenham_plot.ipynb
tutorials/.ipynb_checkpoints/: besenham_plot-checkpoint.ipynb
